@@ -104,6 +104,11 @@ OPENCL_FORCE_NOT_INLINE float3 Material_Index<<CS_MIX_MATERIAL_INDEX>>_Evaluate(
 #endif*/
 
 	float3 result = BLACK;
+	
+	// This test is usually done by BSDF_Evaluate() and must be repeated in
+	// material referencing other materials
+	const float isTransmitEval = (signbit(lightDir.z) != signbit(eyeDir.z));
+
 	const float factor = <<CS_FACTOR_TEXTURE>>;
 	const float weight2 = clamp(factor, 0.f, 1.f);
 	const float weight1 = 1.f - weight2;
@@ -115,8 +120,11 @@ OPENCL_FORCE_NOT_INLINE float3 Material_Index<<CS_MIX_MATERIAL_INDEX>>_Evaluate(
 	// Evaluate material A
 	//--------------------------------------------------------------------------
 
-	BSDFEvent eventMatA = NONE;
-	if (weight1 > 0.f) {
+	BSDFEvent eventMatA = <<CS_MAT_A_PREFIX>>_GetEventTypes<<CS_MAT_A_POSTFIX>>(&mats[<<CS_MAT_A_MATERIAL_INDEX>>]
+			MATERIALS_PARAM);
+	if ((weight1 > 0.f) &&
+			((!isTransmitEval && (eventMatA & REFLECT)) ||
+			(isTransmitEval && (eventMatA & TRANSMIT)))) {
 		const float3 lightDirA = lightDir;
 		const float3 eyeDirA = eyeDir;
 		float directPdfWMatA;
@@ -136,8 +144,11 @@ OPENCL_FORCE_NOT_INLINE float3 Material_Index<<CS_MIX_MATERIAL_INDEX>>_Evaluate(
 	// Evaluate material B
 	//--------------------------------------------------------------------------
 	
-	BSDFEvent eventMatB = NONE;
-	if (weight2 > 0.f) {
+	BSDFEvent eventMatB = <<CS_MAT_B_PREFIX>>_GetEventTypes<<CS_MAT_B_POSTFIX>>(&mats[<<CS_MAT_B_MATERIAL_INDEX>>]
+			MATERIALS_PARAM);
+	if ((weight2 > 0.f) &&
+			((!isTransmitEval && (eventMatB & REFLECT)) ||
+			(isTransmitEval && (eventMatB & TRANSMIT)))) {
 		const float3 lightDirB = lightDir;
 		const float3 eyeDirB = eyeDir;
 		float directPdfWMatB;
@@ -200,20 +211,33 @@ OPENCL_FORCE_NOT_INLINE float3 Material_Index<<CS_MIX_MATERIAL_INDEX>>_Sample(__
 	*pdfW *= weightFirst;
 	result *= *pdfW;
 
-	BSDFEvent eventSecond;
-	float pdfWSecond;
 	const float3 fixedDirSecond = fixedDir;
 	const float3 sampledDirSecond = *sampledDir;
-	float3 evalSecond = sampleMatA ?
-			<<CS_MAT_B_PREFIX>>_Evaluate<<CS_MAT_B_POSTFIX>>(matB, hitPoint,
-					sampledDirSecond, fixedDirSecond, &eventSecond, &pdfWSecond
-					MATERIALS_PARAM) :
-			<<CS_MAT_A_PREFIX>>_Evaluate<<CS_MAT_A_POSTFIX>>(matA, hitPoint,
-					sampledDirSecond, fixedDirSecond, &eventSecond, &pdfWSecond
-					MATERIALS_PARAM);
-	if (!Spectrum_IsBlack(evalSecond)) {
-		result += weightSecond * evalSecond;
-		*pdfW += weightSecond * pdfWSecond;
+
+	// This test is usually done by BSDF_Evaluate() and must be repeated in
+	// material referencing other materials
+	const float isTransmitEval = (signbit(fixedDirSecond.z) != signbit(sampledDirSecond.z));
+
+	BSDFEvent eventSecond =  sampleMatA ?
+		<<CS_MAT_A_PREFIX>>_GetEventTypes<<CS_MAT_A_POSTFIX>>(&mats[<<CS_MAT_A_MATERIAL_INDEX>>]
+			MATERIALS_PARAM) :
+		<<CS_MAT_B_PREFIX>>_GetEventTypes<<CS_MAT_B_POSTFIX>>(&mats[<<CS_MAT_B_MATERIAL_INDEX>>]
+			MATERIALS_PARAM);
+
+	if ((!isTransmitEval && (eventSecond & REFLECT)) ||
+			(isTransmitEval && (eventSecond & TRANSMIT))) {
+		float pdfWSecond;
+		const float3 evalSecond = sampleMatA ?
+				<<CS_MAT_B_PREFIX>>_Evaluate<<CS_MAT_B_POSTFIX>>(matB, hitPoint,
+						sampledDirSecond, fixedDirSecond, &eventSecond, &pdfWSecond
+						MATERIALS_PARAM) :
+				<<CS_MAT_A_PREFIX>>_Evaluate<<CS_MAT_A_POSTFIX>>(matA, hitPoint,
+						sampledDirSecond, fixedDirSecond, &eventSecond, &pdfWSecond
+						MATERIALS_PARAM);
+		if (!Spectrum_IsBlack(evalSecond)) {
+			result += weightSecond * evalSecond;
+			*pdfW += weightSecond * pdfWSecond;
+		}
 	}
 
 	return result / *pdfW;
